# bunqer

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  docker-compose.yml
api/: .gitignore  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial.py  002_add_last_synced_at.py  2d9ebf21f237_add_raw_json_column_to_transactions.py  a1b2c3d4e5f6_add_categories_and_transaction_tag.py  ad00894d5666_add_more_transaction_fields.py  c1d7b3166531_change_bunq_id_to_bigint.py  ccd7574f5b47_add_sender_receiver_fields.py  d66ad6e7602e_add_raw_json_column_to_transactions.py  e1f2g3h4i5j6_add_category_rules.py  f1a2b3c4d5e6_add_company_settings.py  g1h2i3j4k5l6_add_webauthn_credentials.py  h1i2j3k4l5m6_add_documents_table.py  i1j2k3l4m5n6_add_document_id_to_transactions.py  j1k2l3m4n5o6_add_content_hash_to_documents.py
api/src/vibe_accountant/: __init__.py  auth.py  bunq_client.py  config.py  database.py  logger.py  main.py
api/src/vibe_accountant/models/: __init__.py  account.py  category.py  category_rule.py  client.py  company_settings.py  document.py  integration.py  invoice.py  transaction.py  webauthn_credential.py
api/src/vibe_accountant/routes/: __init__.py  auth.py  categories.py  documents.py  events.py  health.py  integrations.py  invoices.py  passkeys.py  payments.py  settings.py  setup.py  transactions.py
api/src/vibe_accountant/services/: __init__.py  document_matcher.py  document_processor.py  rule_engine.py  s3.py
ui/: .envrc  index.html  package-lock.json  package.json  tailwind.config.js  (+1 more)
(+21 files in other folders)
